[package]
name = "gramhive"
version = "0.1.0"
edition = "2024"
description = "A high-level library on top of grammers for building Telegram bots."
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.97"
async-tempfile = { version = "0.7.0", features = ["uuid"] }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = "0.10.3"
dotenvy = "0.15.7"
dptree = "0.3.0"
envy = "0.4.2"
evalexpr = "12.0.2"
futures = "0.3.31"
grammers-client = { git = "https://github.com/Lonami/grammers.git", features = [
  "html5ever",
  "html",
  "markdown",
  "parse_invite_link",
  "serde",
] }
grammers-mtsender = "0.7.0"
htmlescape = "0.3.1"
indicatif = { version = "0.17.11", features = ["futures", "tokio"] }
itertools = "0.14.0"
lru = "0.13.0"
mockall = { version = "0.13.1", features = ["nightly"] }
mockall_double = "0.3.1"
pdf2image = "0.1.3"
persian_date = "1.0.1"
phf = { version = "0.11.3", features = ["macros"] }
ptime = "0.1.1"
pulldown-cmark = "0.13.0"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "rustls-tls",
  "json",
  "gzip",
  "multipart",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = "0.3.40"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }
sea-orm = { version = "1.1.7", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "mock",
] }
redis = { version = "0.29.1", features = [
  "tokio-rustls-comp",
  "tls-rustls-insecure",
  "json",
] }
redis-macros = "0.5.2"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
gramhive_macros = { path = "./gramhive_macros" }
inventory = "0.3.20"
async-trait = "0.1.88"
bon = "3.6.0"
dialoguer = "0.11.0"
